--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ a {
 }
 
 header {
-    background-image: url("../img/person-working-on-black-laptop-1174768.jpg");
+    background-image: url("../img/rson-working-on-black-laptop-1174768.webp");
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
